<?xml version="1.0" encoding="utf-8"?>
<me.barrasso.android.volume.ui.BackgroundLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/visible_panel"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:layout_height="140dp"
    tools:background="@color/windows_phone_theme_dark"
    android:persistentDrawingCache="animation|scrolling"
    android:descendantFocusability="afterDescendants">

    <!-- Volume + Vibrate -->
    <RelativeLayout
        android:gravity="top|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Volume, i.e. 15/30 -->
        <TextView
            android:textSize="24sp"
            tools:text="8/15"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@id/volume_text"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="14dp"
            android:paddingEnd="2.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/streamName"
            tools:text="Media + Apps"
            android:textSize="16.0sp"
            android:gravity="start|bottom"
            android:layout_marginStart="12dp"
            android:layout_alignBaseline="@id/volume_text"
            android:layout_toEndOf="@id/volume_text"
            android:textColor="@color/wp_volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:paddingTop="6.0dp"
            android:paddingBottom="4dp"
            android:paddingStart="2.0dp"
            android:paddingEnd="14dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/volume_unknown"
            android:id="@id/stream_icon"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:src="@drawable/uvc_ringer_off_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/wp_volume_text"
            android:textSize="14sp"
            android:layout_toStartOf="@id/stream_icon"
            android:layout_centerVertical="true"
            android:id="@id/ringer_mode"
            android:text="@string/vibrate_ring"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingStart="2.0dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!-- Music Panel -->
    <LinearLayout
        android:id="@id/music_panel"
        android:baselineAligned="false"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:focusable="true"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Playback Controls -->
        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:contentDescription="@string/previous"
                android:layout_marginStart="14dp"
                android:padding="4dp"
                android:scaleType="center"
                android:id="@id/media_previous"
                android:src="@drawable/previous"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:contentDescription="@string/play_pause"
                android:layout_marginStart="24dp"
                android:scaleType="center"
                android:id="@id/media_play_pause"
                android:src="@drawable/play"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp" />

            <ImageButton
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:contentDescription="@string/next"
                android:layout_marginStart="24dp"
                android:padding="4dp"
                android:scaleType="center"
                android:id="@id/media_next"
                android:src="@drawable/next"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Track Information -->
        <LinearLayout
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@id/track_info"
            android:baselineAligned="false"
            android:clickable="true"
            android:paddingTop="8dp"
            android:gravity="bottom|start"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/track_song"
                tools:text="Last Chance (feat. Project 46)"
                android:textStyle="bold"
                android:textSize="18sp"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="marquee"
                android:layout_marginStart="14dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@id/track_artist"
                android:textSize="16sp"
                tools:text="Kaskade"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="marquee"
                android:layout_marginStart="14dp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</me.barrasso.android.volume.ui.BackgroundLinearLayout>